@@ -18,6 +18,8 @@
     file change detection blacklist non-block nfs fuse cifs smbfs ftpfs
     percent in path bar select by pattern
     fix hang on click on 5000+ selected files in list view
+    clean udevil mount points on device removal, exit
+    fix auto umount on eject
 0.7.10  2012-07-25:
     added sort options #87 #37 #23
     completed russian translation ru.po
